# structlog-httpx

./: AGENTS.md  README.md  pyproject.toml
src/structlog_httpx/: __init__.py  _config.py  _constants.py  _instrumentor.py  _types.py  processors.py
tests/: conftest.py  test_install.py  test_processors.py  test_transport.py
