[project]
name = "structlog-httpx"
version = "0.2.0"
description = "Structured logging for outgoing HTTPX requests using structlog"
readme = "README.md"
authors = [
    { name = "Nikita Senin", email = "nikita1e0cf@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.20.0",
    "structlog>=20.0.0",
    "wrapt>=2.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
